Tests for JsonValueConverter

--- a/tests/cpp-tests/CMakeLists.txt
+++ b/tests/cpp-tests/CMakeLists.txt
@@ -160,6 +160,7 @@ set(TESTS_SRC
   Classes/VibrateTest/VibrateTest.cpp
   Classes/ZwoptexTest/ZwoptexTest.cpp
   Classes/SpriteFrameCacheTest/SpriteFrameCacheTest.cpp
+  classes/JsonValueConverterTest/JsonValueConverterTest.cpp
   Classes/controller.cpp
   Classes/testBasic.cpp
   ${PLATFORM_SRC}
