--- a/tests/cpp-tests/proj.win32/cpp-tests.vcxproj.filters
+++ b/tests/cpp-tests/proj.win32/cpp-tests.vcxproj.filters
@@ -441,6 +441,9 @@
     <ClCompile Include="..\Classes\SpriteFrameCacheTest\SpriteFrameCacheTest.cpp">
       <Filter>Classes\SpriteFrameCacheTest</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\JsonValueConverterTest/JsonValueConverterTest.cpp">
+      <Filter>Classes\JsonValueConverterTest</Filter>
+    </ClCompile>
     <ClCompile Include="..\Classes\CurlTest\CurlTest.cpp">
       <Filter>Classes\CurlTest</Filter>
     </ClCompile>
@@ -902,6 +905,9 @@
     </ClInclude>
     <ClInclude Include="..\Classes\SpriteFrameCacheTest\SpriteFrameCacheTest.h">
       <Filter>Classes\SpriteFrameCacheTest</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\JsonValueConverterTest/JsonValueConverterTest.h">
+      <Filter>Classes\JsonValueConverterTest</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\CurlTest\CurlTest.h">
       <Filter>Classes\CurlTest</Filter>
