--- a/tests/cpp-tests/proj.win32/cpp-tests.vcxproj.filters
+++ b/tests/cpp-tests/proj.win32/cpp-tests.vcxproj.filters
@@ -441,7 +441,7 @@
     <ClCompile Include="..\Classes\SpriteFrameCacheTest\SpriteFrameCacheTest.cpp">
       <Filter>Classes\SpriteFrameCacheTest</Filter>
     </ClCompile>
-    <ClCompile Include="..\Classes\JsonValueConverterTest/JsonValueConverterTest.cpp">
+    <ClCompile Include="..\Classes\JsonValueConverterTest\JsonValueConverterTest.cpp">
       <Filter>Classes\JsonValueConverterTest</Filter>
     </ClCompile>
     <ClCompile Include="..\Classes\CurlTest\CurlTest.cpp">
@@ -906,7 +906,7 @@
     <ClInclude Include="..\Classes\SpriteFrameCacheTest\SpriteFrameCacheTest.h">
       <Filter>Classes\SpriteFrameCacheTest</Filter>
     </ClInclude>
-    <ClInclude Include="..\Classes\JsonValueConverterTest/JsonValueConverterTest.h">
+    <ClInclude Include="..\Classes\JsonValueConverterTest\JsonValueConverterTest.h">
       <Filter>Classes\JsonValueConverterTest</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\CurlTest\CurlTest.h">
